update to see changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Personal Portfolio #06 | AsmrProg</title>
+    <title>Personal Portfolio | UMIA</title>
 </head>
 
 <body>
@@ -27,12 +27,14 @@
 
     <div class="main">
         <div class="info">
-            <h1>Hello, I'm Reza, <br>Creative Developer</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ea doloribus repudiandae quibusdam
-                voluptates non eum perferendis aut.</p>
+            <h1>Hello, I'm Ungku Adrian, <br>Data Analyst</h1>
+            <p class="subtitle"> with a Strong Foundation in Electrical Engineering</p>
+
+            <p>Leveraging analytical skills and engineering principles to build robust data solutions. 
+                Passionate about transforming data into actionable insights and driving technological advancements.</p>
             <button>Download Resume</button>
         </div>
-        <img src="assets/profile-1.png">
+        <img src="assets/UMIA.png">
     </div>
 
     <div class="recent">
