--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     <nav>
         <div class="logo">
-            <img src="assets/logo.png">
-            <a href="#">AsmrProg</a>
+            <img src="assets/UMIA-Logo.svg">
         </div>
         <div class="nav-links">
             <a class="selected" href="index.html">Home</a>
