--- a/works.html
+++ b/works.html
@@ -13,19 +13,18 @@
 
     <nav>
         <div class="logo">
-            <img src="assets/logo.png">
-            <a href="#">AsmrProg</a>
+            <img src="assets/UMIA-Logo.svg">
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a class="selected" href="works.html">Works</a>
+            <a class="selected" href="works.html">Project Showcase</a>
             <a href="single-work.html">Single Work</a>
-            <a href="blog.html">Blog</a>
+            <!-- <a href="blog.html">Blog</a> -->
             <a href="about.html">About</a>
         </div>
     </nav>
 
-    <h1 class="page-title">Works</h1>
+    <h1 class="page-title">Project Showcase</h1>
 
     <div class="content">
         <div class="works-list">
