update resume attachment

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 function downloadResume() {
                     const link = document.createElement('a');
                     // URL-encoded path to your resume file
-                    const filePath = 'assets/UMIA%20Resume%20(as%20of%2026th%20November%202023).pdf';
+                    const filePath = 'assets/UMIA Resume (as of 8th July 2024).pdf';
                     link.href = filePath;
-                    link.download = 'UMIA Resume (as of 26th November 2023).pdf';
+                    link.download = 'UMIA Resume (as of 8th July 2024).pdf';
                     document.body.appendChild(link);
                     link.click();
                     document.body.removeChild(link);
