--- a/about.html
+++ b/about.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>About Page | AsmrProg</title>
+    <title>About Page | UMIA</title>
 </head>
 
 <body>
 
     <nav>
         <div class="logo">
-            <img src="assets/logo.png">
-            <a href="#">AsmrProg</a>
+            <img src="assets/UMIA-Logo.svg">
+            <!-- <a href="#">AsmrProg</a> -->
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="works.html">Works</a>
-            <a href="single-work.html">Single Work</a>
-            <a href="blog.html">Blog</a>
+            <a href="works.html">Project Showcase</a>
+            <!-- <a href="single-work.html">Single Work</a> -->
+            <!-- <a href="blog.html">Blog</a> -->
             <a class="selected" href="about.html">About</a>
         </div>
     </nav>
@@ -29,23 +29,36 @@
 
     <div class="content">
         <div class="container">
-            <img src="assets/profile-2.png">
+            <img src="assets/UMIA.png">
             <div class="about">
-                <h2>I'm Reza Mehdikhanlou</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae natus inventore cum quam harum
-                    velit fugiat, aperiam doloribus quos officia ipsa nihil quibusdam at enim ipsum voluptas dignissimos
-                    et minus!</p>
-                <p class="email">Contact Me : RezaMehdikhanlou@gmail.com</p>
+                <h2>I'm Ungku Adrian</h2>
+                <p>As a recent graduate in Electrical Engineering from UiTM, I have developed a passion for leveraging data to drive meaningful insights.
+                     My academic journey has fueled my enthusiasm for data analysis, and I am eager to apply my analytical skills in a data-centric role.
+                      Committed to contributing to innovative solutions, I aim to make a positive impact in the field of data analytics.
+                </p>
+                <p class="email">Contact Me : ungkuadrian@gmail.com</p>
             </div>
         </div>
     </div>
 
     <footer>
         <div class="socials">
-            <i class='bx bxl-facebook-square'></i>
-            <i class='bx bxl-instagram'></i>
-            <i class='bx bxl-twitter'></i>
-            <i class='bx bxl-linkedin-square'></i>
+            <!-- <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-facebook-square'></i>
+            </a>
+            <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-instagram'></i>
+            </a>
+            <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-twitter'></i> -->
+            </a>
+            <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-linkedin-square'></i>
+            </a>
+            <a href="https://github.com/maeltwosinggit" target="_blank">
+                <i class='bx bxl-github'></i>
+            </a>
+            
         </div>
         <p>Copyright ©2024, All rights reserved.</p>
     </footer>
