--- a/works.html
+++ b/works.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Works Page | AsmrProg</title>
+    <title>Works Page | UMIA</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a class="selected" href="works.html">Project Showcase</a>
-            <a href="single-work.html">Single Work</a>
+            <!-- <a href="single-work.html">Single Work</a> -->
             <!-- <a href="blog.html">Blog</a> -->
             <a href="about.html">About</a>
         </div>
@@ -93,10 +93,22 @@
 
     <footer>
         <div class="socials">
-            <i class='bx bxl-facebook-square'></i>
-            <i class='bx bxl-instagram'></i>
-            <i class='bx bxl-twitter'></i>
-            <i class='bx bxl-linkedin-square'></i>
+            <!-- <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-facebook-square'></i>
+            </a>
+            <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-instagram'></i>
+            </a>
+            <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-twitter'></i> -->
+            </a>
+            <a href="https://www.linkedin.com/in/ungku-adrian-607815180/" target="_blank">
+                <i class='bx bxl-linkedin-square'></i>
+            </a>
+            <a href="https://github.com/maeltwosinggit" target="_blank">
+                <i class='bx bxl-github'></i>
+            </a>
+            
         </div>
         <p>Copyright ©2024, All rights reserved.</p>
     </footer>
