comment out Work Page for the time being

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="nav-links">
             <a class="selected" href="index.html">Home</a>
-            <a href="works.html">Project Showcase</a>
+            <!-- <a href="works.html">Project Showcase</a> -->
             <!-- <a href="single-work.html">Single Work</a> -->
             <!-- <a href="blog.html">Blog</a> -->
             <a href="about.html">About</a>
