--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="works.html">Project Showcase</a>
+            <!-- <a href="works.html">Project Showcase</a> -->
             <!-- <a href="single-work.html">Single Work</a> -->
             <!-- <a href="blog.html">Blog</a> -->
             <a class="selected" href="about.html">About</a>
